# blueye.sdk

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  README.md  about_the_pioneer.md  codecov.yml  contributing.md  http-api.yml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml  versions.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: DeployDocumentation.yml  PublishRelease.yml  Tests.yml  codeql.yml  documentation.yml
blueye/: __init__.py
blueye/sdk/: __init__.py  battery.py  camera.py  connection.py  constants.py  diagnostics.py  drone.py  guestport.py  logs.py  mission.py  motion.py  pioneer.py  utils.py
blueye/sdk/scripts/: bez_to_mcap.py  entrypoint.py  foxglove_bridge.py  logserver.py
blueyepioneersdk/: __init__.py  diagnostics.py  pioneer.py  video.py
contributing/: index.html
dev/: 404.html  http-api.html  index.html  objects.inv
dev/configuration/: index.html
dev/foxglove-bridge/: index.html
dev/http-api/: index.html
dev/logs/foxglove-bez-to-mcap/: index.html
dev/logs/legacy-log-file-format/: index.html
dev/logs/listing-and-downloading/: index.html
dev/logs/plotting/: index.html
dev/logs/runtime-logs/: index.html
dev/migrating-to-v2/: index.html
dev/mission-planning/: index.html
dev/movement/from-the-CLI/: index.html
dev/nmea-publisher/: index.html
dev/odometer-to-831l/: index.html
dev/peripherals/: index.html
dev/protobuf-protocol/: index.html
dev/quick_start/: index.html
dev/search/: search_index.json
dev/telemetry-callback/: index.html
doc_utils/: __init__.py  load_code_from_file.py
docs/: about_the_pioneer.md  configuration.md  foxglove-bez-to-mcap.md  foxglove-bridge.md  http-api.html  http-api.md  http-api.yml  index.md  intro.md  migrating-to-v2.md  mission-planning.md  nmea-publisher.md  odometer-to-831l.md  peripherals.md  protobuf-protocol.md  quick_start.md  telemetry-callback.md  using-raw-protobuf.md
docs/configuration/: index.html
docs/css/: mkdocsoad.css
docs/logs/: foxglove-bez-to-mcap.md  legacy-log-file-format.md  listing-and-downloading.md  log-file-format.md  plotting.md  runtime-logs.md
docs/media/: pioneer-at-reef.gif.REMOVED.git-id  rtsp-in-vlc.gif.REMOVED.git-id  sdk-demo.gif.REMOVED.git-id
docs/migrating-to-v2/: index.html
docs/movement/: 2.-with-an-xbox-controller.md  from-the-CLI.md  with-a-gamepad.md  with-an-xbox-controller.md
docs/oad_templates/: layout.html
docs/protobuf-protocol/: index.html
docs/quick_start/: index.html
docs/reference/: blueye.protocol.md
docs/telemetry-callback/: index.html
docs/video/: 1.-basic-gstreamer-pipeline.md  downloading-videos.md  downloading.md  gstreamer-for-video-streaming.md
examples/: bez_to_mcap.py  foxglove_bez_to_mcap.py  foxglove_bridge_ws.py  foxglove_pipe_sonar.py  foxglove_pipe_sonar_udp_simulator.py  gamepad_controller.py  mission_go_to_waypoint.py  mission_seabed.py  mission_tilt.py  nmea_heading_publisher.py  nmea_publisher.py  parse_log_to_dataframe.py  print_depth.py  print_imu.py  print_status.py  profiler.py  publish_odometer_to_831l.py  waterlinked_spectrum_to_mcap.py  xbox_controller.py
latest/: 404.html  http-api.html  index.html
latest/configuration/: index.html
latest/foxglove-bridge/: index.html
latest/migrating-to-v2/: index.html
latest/nmea-publisher/: index.html
latest/peripherals/: index.html
latest/protobuf-protocol/: index.html
latest/quick_start/: index.html
latest/telemetry-callback/: index.html
pioneer/: diagnostics.py  video.py
search/: search_index.json
tests/: conftest.py  test_blueyepioneersdk.py  test_camera.py  test_deprecations.py  test_integration.py  test_logs.py  test_mission.py  test_motion.py  test_overlay_control.py  test_peripherals.py  test_req_rep_client.py  test_sdk.py  test_telemetry_client.py  test_thread_context.py  test_utils.py
v1.0/: 404.html  http-api.html  index.html  versions.json
v1.0/configuration/: index.html
v1.0/docs/: http-api.html
v1.0/migrating-to-v2/: index.html
v1.0/protobuf-protocol/: index.html
v1.0/quick_start/: index.html
v1.0/search/: search_index.json
v1.0/telemetry-callback/: index.html
v2.0/: 404.html  http-api.html  index.html
v2.0/migrating-to-v2/: index.html
v2.0/protobuf-protocol/: index.html
v2.0/quick_start/: index.html
v2.0/search/: search_index.json
v2.0/telemetry-callback/: index.html
v2.1/: index.html
v2.1/configuration/: index.html
v2.1/migrating-to-v2/: index.html
v2.1/peripherals/: index.html
v2.1/protobuf-protocol/: index.html
v2.1/search/: search_index.json
v2.2/foxglove-bridge/: index.html
v2.2/migrating-to-v2/: index.html
v2.2/quick_start/: index.html
v2.2/search/: search_index.json
v2.2/telemetry-callback/: index.html
v2.3/: http-api.html  index.html
v2.3/foxglove-bridge/: index.html
v2.3/migrating-to-v2/: index.html
v2.3/peripherals/: index.html
v2.3/protobuf-protocol/: index.html
v2.3/quick_start/: index.html
v2.4/foxglove-bridge/: index.html
v2.4/mission-planning/: index.html
v2.4/nmea-publisher/: index.html
v2.4/odometer-to-831l/: index.html
v2.4/peripherals/: index.html
v2.4/quick_start/: index.html
v2.4/search/: search_index.json
v2.4/telemetry-callback/: index.html
v2.5/: 404.html  index.html  objects.inv
v2.5/configuration/: index.html
v2.5/migrating-to-v2/: index.html
v2.5/nmea-publisher/: index.html
v2.5/quick_start/: index.html
v2.5/search/: search_index.json
v2.5/telemetry-callback/: index.html
v2.6/: 404.html  http-api.html  index.html
v2.6/configuration/: index.html
v2.6/migrating-to-v2/: index.html
v2.6/peripherals/: index.html
v2.6/search/: search_index.json
v2.6/telemetry-callback/: index.html
v2.7/: 404.html  http-api.html  objects.inv
v2.7/foxglove-bridge/: index.html
v2.7/http-api/: index.html
v2.7/js/: deprecated-toc.js
v2.7/migrating-to-v2/: index.html
v2.7/oad_templates/: layout.html
v2.7/quick_start/: index.html
v2.7/search/: search_index.json
v2.7/telemetry-callback/: index.html
(+211 files in other folders)
